--- a/02-HTML-Fundamentals/index.html
+++ b/02-HTML-Fundamentals/index.html
@@ -6,13 +6,6 @@
 </head>
 
 <body>
-    <!-- <h1>The Basic Language of the web: HTML</h1>
-        <h2>The Basic Language of the web: HTML</h2>
-        <h3>The Basic Language of the web: HTML</h3>
-        <h4>The Basic Language of the web: HTML</h4>
-        <h5>The Basic Language of the web: HTML</h5>
-        <h6>The Basic Language of the web: HTML</h6> -->
-
     <header>
         <h1>📘 The Code Magazine</h1>
         <div>
@@ -26,9 +19,9 @@
     <article>
         <header>
             <h2>The Basic Language of the Web: HTML</h2>
-            <img src="./laura-jones.jpg" alt="headshot of laura-jones" width="50px" height="50px" />
+            <img src="./img/laura-jones.jpg" alt="headshot of laura-jones" width="50px" height="50px" />
             <p>Posted by <strong> Laura Jones</strong> on Monday, June 21st 2027</p>
-            <img src="./post-img.jpg" alt="HTML code on screen" width="500px" height="200px" />
+            <img src="./img/post-img.jpg" alt="HTML code on screen" width="500px" height="200px" />
         </header>
 
         <p>All modern websites and web applications are built using three <em> fundamental</em> technologies: HTML, CSS
@@ -70,6 +63,27 @@
 
         <p>Hopefully you learned something new here. See you next time!</p>
     </article>
+
+    <aside>
+        <strong><h3>Related posts</h3></strong>
+        <ul>
+            <li>
+                <img src="./img/related-1.jpg" width="75" height="75" alt="related-1" />
+                <a href="#">How to Learn web Development</a>
+                <p>By Jonas Schmedtmann</p>
+            </li>
+            <li>
+                <img src="./img/related-2.jpg" width="75" height="75" alt="related-2" />
+                <a href="#">The Unknown Powers of CSS</a>
+                <p>By Jim Dillon</p>
+            </li>
+            <li>
+                <img src="./img/related-3.jpg" width="75" height="75" alt="related-3" />
+                <a href="#">Why JavaScript Awesome</a>
+                <p>By Matilda</p>
+            </li>
+        </ul>
+    </aside>
 
 
     <footer>
